Fix onboarding and verify email. Reformat stores.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.1",
+    "axios": "^1.5.1",
     "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
