--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
